add type production to view

--- a/tipkor/poly/templates/poly/confirm.html
+++ b/tipkor/poly/templates/poly/confirm.html
@@ -19,11 +19,14 @@
             <h1>Подтвердить заказ</h1>
             <div>
                 <div class="col">
-                    <h2 style="color: rgb(145, 1, 30);">Стоимость: {{ order.cost|default:"Сделайте расчет" }} руб.</h2>
+                    <h2>{{ type_production }}</h2>
+
                     <h5 style="color: rgb(93, 3, 131);">Формат: {{ order.format_p }}</h5>
                     <h5 style="color: rgb(93, 3, 131);">Материал: {{ order.paper }} г/м</h5>
                     <h5 style="color: rgb(93, 3, 131);">Двухсторонняя печать: {{ order.duplex|yesno:"Да,Нет" }}</h5>
                     <h5 style="color: rgb(93, 3, 131);">Тираж: {{ order.pressrun }} штук.</h5>
+                    <h2 style="color: rgb(145, 1, 30);">Стоимость: {{ order.cost|default:"Сделайте расчет" }} руб.</h2>
+
                 </div>
                 <div class="col">
                     <h2 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date|date:"d.m.Y" }}г.</h2>
