--- a/tipkor/poly/static/poly/css/poly.css
+++ b/tipkor/poly/static/poly/css/poly.css
@@ -7,7 +7,7 @@
     background-color: rgb(210, 210, 210);
 }
 
-#id_paper, #id_format_p, #id_duplex, #id_pressrun  {
+#id_paper, #id_format_p, #id_duplex, #id_pressrun, #id_post_obr  {
     height: 40px;
     width: 200px;
 }
