--- a/tipkor/poly/templates/poly/confirm.html
+++ b/tipkor/poly/templates/poly/confirm.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'poly/css/card.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'poly/css/poly.css' %}">
 </head>
 <br>
 <br>
