--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -14,6 +14,9 @@
 <div class="container p-3">
     <div class="row">
         <h1 id="slogan">Офсетная печать, широкоформатка, печати штампы</h1>
+        <a href="/expirement" target="_blank">
+            <h1 id="slogan">Экспериметнальная страница</h1>
+        </a>
     </div>
     <div>
         <p style="font-size: 18px; text-align: center; margin-top: 20px;">
