--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -80,9 +80,9 @@
 					Широкоформатная печать
 				</a>
 				<ul class="dropdown-menu dropdown-menu-dark">
-					<li><a class="dropdown-item" href="#poly">баннеры</a></li>
-					<li><a class="dropdown-item" href="#">наклейки</a></li>
-					<li><a class="dropdown-item" href="#">таблички</a></li>
+					<li><a class="dropdown-item" href="/wide/banner">баннеры</a></li>
+					<li><a class="dropdown-item" href="/wide/sticker">наклейки</a></li>
+					<li><a class="dropdown-item" href="/wide/table">таблички</a></li>
 				</ul>
 			</div>
 
