--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -86,7 +86,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Баннеры</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
-                    <a href="#" class="btn btn-primary px-5">Расчет баннера</a>
+                    <a href="/wide/banner" class="btn btn-primary px-5">Расчет баннера</a>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Наклейеки</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
-                    <a href="#" class="btn btn-primary px-5">Расчет наклйки</a>
+                    <a href="/wide/sticker" class="btn btn-primary px-5">Расчет наклйки</a>
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Таблички</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
-                    <a href="#" class="btn btn-primary px-5">Расчет таблички</a>
+                    <a href="/wide/table" class="btn btn-primary px-5">Расчет таблички</a>
                 </div>
             </div>
         </div>
