--- a/tipkor/tipkor/templates/tipkor/expirement.html
+++ b/tipkor/tipkor/templates/tipkor/expirement.html
@@ -22,18 +22,40 @@
 
 
 <body>
-	<div class="container border">
-		<div class="row">
+	<div class="container border py-5">
+		<div class="row d-flex">
 
-			<div class="column box m-2">
+			<div class="box-1 column m-2 flex-fill">
 			</div>
-			<div class="column box m-2">
+			<div class="box-2 column m-2 flex-fill">
 			</div>
-			<div class="column box m-2">
+			<div class="box-3 column m-2 flex-fill">
 			</div>
-
-
 		</div>
+	</div>
+
+
+
+
+
+	<div class="container pt-5">
+		<p>
+			<a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+			  Ссылка с href
+			</a>
+
+			<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+			  Кнопка с data-target
+			</button>
+		  </p>
+
+		  <div class="collapse" id="collapseExample">
+			<div class="card card-body">
+			  Некоторый заполнитель для компонента сворачивания. Эта панель по умолчанию скрыта, но открывается, когда пользователь активирует соответствующий триггер.
+			</div>
+		  </div>
+		  
+	</div>
 
 
 	</div>
