--- a/tipkor/wide/templates/wide/sticker.html
+++ b/tipkor/wide/templates/wide/sticker.html
@@ -41,7 +41,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <div class="col">{{ calc_form.post_obr }}<p>Обработка и люверсы (убрать обработку)</p>
+                            <div hidden class="col">{{ calc_form.post_obr }}<p>Обработка и люверсы (убрать обработку)</p>
                             </div>
                             <button type="submit" class="calc_button btn btn-primary" name="calc_form">Расчет</button>
                             <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
