--- a/tipkor/poly/templates/poly/booklet.html
+++ b/tipkor/poly/templates/poly/booklet.html
@@ -84,7 +84,7 @@
                 <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
             </div>
             {% else %}
-
+            <h4>{{ result.cost }}</h4>
             <h2 style="color: rgb(145, 1, 30);">Выбирете параметры и нажмите "Расчет".</h2>
 
             {% endif %}
