--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -75,7 +75,7 @@
 			</div>
 
 			<div class="dropdown d-flex flex-fill">
-				<a class="btn btn-primary flex-fill btn-lg  m-1 dropdown-toggle" href="#poly" role="button"
+				<a class="btn btn-primary flex-fill btn-lg  m-1 dropdown-toggle" href="#wide" role="button"
 					id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
 					Широкоформатная печать
 				</a>
@@ -87,14 +87,14 @@
 			</div>
 
 			<div class="dropdown d-flex flex-fill">
-				<a class="btn btn-primary flex-fill btn-lg  m-1 dropdown-toggle" href="#poly" role="button"
+				<a class="btn btn-primary flex-fill btn-lg  m-1 dropdown-toggle" href="#stamp" role="button"
 					id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
 					Печати
 				</a>
 				<ul class="dropdown-menu dropdown-menu-dark">
-					<li><a class="dropdown-item" href="#poly">печати</a></li>
-					<li><a class="dropdown-item" href="#">штампы</a></li>
-					<li><a class="dropdown-item" href="#">другое</a></li>
+					<li><a class="dropdown-item" href="/stamp/c_stamp">печати</a></li>
+					<li><a class="dropdown-item" href="/stamp/r_stamp">штампы</a></li>
+					<li><a class="dropdown-item" href="#">пустое</a></li>
 				</ul>
 			</div>
 
