--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -129,7 +129,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Печати ИП ООО</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
-                    <a href="#" class="btn btn-primary px-5">Заказ печати</a>
+                    <a href="/stamp/c_stamp" class="btn btn-primary px-5">Заказ печати</a>
                 </div>
             </div>
         </div>
@@ -140,7 +140,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Штампы</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
-                    <a href="#" class="btn btn-primary px-5">Заказ штампа</a>
+                    <a href="/stamp/r_stamp" class="btn btn-primary px-5">Заказ штампа</a>
                 </div>
             </div>
         </div>
