--- a/tipkor/tipkor/templates/tipkor/expirement.html
+++ b/tipkor/tipkor/templates/tipkor/expirement.html
@@ -39,22 +39,65 @@
 
 
 	<div class="container pt-5">
-		<p>
-			<a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-			  Ссылка с href
-			</a>
-
-			<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-			  Кнопка с data-target
-			</button>
-		  </p>
-
-		  <div class="collapse" id="collapseExample">
-			<div class="card card-body">
-			  Некоторый заполнитель для компонента сворачивания. Эта панель по умолчанию скрыта, но открывается, когда пользователь активирует соответствующий триггер.
+		<div class="row">
+			<div class="col border">
+				<a class="btn btn-primary w-100" data-bs-toggle="collapse" href="#collapseExample" role="button"
+					aria-expanded="false" aria-controls="collapseExample">
+					Ссылка с href
+				</a>
 			</div>
-		  </div>
-		  
+
+			<div class="col border">
+				<a class="btn btn-primary w-100" data-bs-toggle="collapse" href="#collapseExample2" role="button"
+					aria-expanded="false" aria-controls="collapseExample2">
+					Ссылка с href
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col col-6">
+				<div class="collapse" id="collapseExample">
+					<div class="card card-body">
+						<a class="btn btn-danger mt-1" href="www.ya.ru" role="button">BUTTON 1</a>
+						<a class="btn btn-danger mt-1" href="www.ya.ru" role="button">BUTTON 1</a>
+						<a class="btn btn-danger mt-1" href="www.ya.ru" role="button">BUTTON 1</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col col-6">
+				<div class="collapse" id="collapseExample2">
+					<div class="card card-body">
+						<a class="btn btn-danger mt-1" href="www.ya.ru" role="button">BUTTON 1</a>
+						<a class="btn btn-danger mt-1" href="www.ya.ru" role="button">BUTTON 1</a>
+						<a class="btn btn-danger mt-1" href="www.ya.ru" role="button">BUTTON 1</a>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<!-- <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" 2
+				aria-expanded="false" aria-controls="collapseExample">
+				Кнопка с data-target
+			</button> -->
+
+
+	</div>
 	</div>
 
 
