--- a/tipkor/stamp/templates/stamp/confirm.html
+++ b/tipkor/stamp/templates/stamp/confirm.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'poly/css/poly.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'stamp/css/stamp.css' %}">
 </head>
 <br>
 <br>
@@ -21,11 +21,10 @@
                 <div class="col">
                     <h2>{{ type_production }}</h2>
 
-                    <h5 style="color: rgb(93, 3, 131);">Формат: {{ order.format_p }}</h5>
-                    <h5 style="color: rgb(93, 3, 131);">Материал: {{ order.paper }} г/м</h5>
-                    <h5 style="color: rgb(93, 3, 131);">Двухсторонняя печать: {{ order.duplex|yesno:"Да,Нет" }}</h5>
-                    <h5 style="color: rgb(93, 3, 131);">Тираж: {{ order.pressrun }} штук.</h5>
-                    <h2 style="color: rgb(145, 1, 30);">Стоимость: {{ order.cost|default:"Сделайте расчет" }} руб.</h2>
+                    <h5 style="color: rgb(93, 3, 131);">Стоимость: {{ order.format_p }}</h5>
+                    <h5 style="color: rgb(93, 3, 131);">Срочно: {{ order.express|yesno:"Да,Нет" }} г/м</h5>
+                    <h5 style="color: rgb(93, 3, 131);">Оснастка: {{ order.snap }}</h5>
+                    <h5 style="color: rgb(93, 3, 131);">Количество: {{ order.count }} штук.</h5>
 
                 </div>
                 <div class="col">
@@ -34,7 +33,7 @@
                 </div>
             </div>
             <div>
-                <form class="form-control-lg " action="{% url 'poly:confirm' order.id %}" method="post">
+                <form class="form-control-lg " action="{% url 'stamp:confirm' order.id %}" method="post">
                     {% csrf_token %}
                     <div class="row border">
                         <div class="col border">{{ form.name }}<p>Имя</p>
