--- a/tipkor/stamp/templates/stamp/c_stamp.html
+++ b/tipkor/stamp/templates/stamp/c_stamp.html
@@ -81,21 +81,21 @@
             </div>
 
             <div>
-                <form class="form-control-lg " action="{% url 'stamp:confirm' result.id %}" method="post">
+                <form class="form-control-lg " action="{% url 'stamp:c_stamp'%}" method="post">
 
                     <div class="row border">
                         {% csrf_token %}
-                        <div class="col">{{ form.comment }}<p>ИНН (если есть)</p>
+                        <div class="col">{{ confirm_form.comment }}<p>ИНН (если есть)</p>
                         </div>
-                        <div class="col border">{{ form.file }}<p>макет</p>
+                        <div class="col border">{{ confirm_form.file }}<p>макет</p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col border">{{ form.name }}<p>Имя</p>
+                        <div class="col border">{{ confirm_form.name }}<p>Имя</p>
                         </div>tipkor@mail.ru
-                        <div class="col border">{{ form.email }}<p>почта</p>
+                        <div class="col border">{{ confirm_form.email }}<p>почта</p>
                         </div>
-                        <div class="col border">{{ form.tel }}<p>телефон</p>
+                        <div class="col border">{{ confirm_form.tel }}<p>телефон</p>
                         </div>
                     </div>
             </div>
